# ESP32

./: .gitignore  sdkconfig  sdkconfig.old
.history/main/: main_20260718173214.c  main_20260718174032.c  main_20260718174041.c  main_20260718174114.c  main_20260718174137.c  main_20260718174150.c  main_20260718174156.c  main_20260718174206.c  main_20260718174213.c  main_20260718174225.c  main_20260718174229.c  main_20260718174235.c  main_20260718174319.c  main_20260718174322.c  main_20260718174324.c  wifi_connectivity_20260718175001.c
main/: CMakeLists.txt  main.c
